--- a/project-status.json
+++ b/project-status.json
@@ -50,7 +50,7 @@
       }
     },
     {
-      "engineerName": "Anand",
+      "engineerName": "Eswanth Potnuri",
       "projectName": "3A-BO1-25113 & 25114-CDM & Face error inspection unit with Robot system",
       "statuses": {
         "2024-12-05": "Not Started"
@@ -109,14 +109,14 @@
       "engineerName": "Harikrishnan P R",
       "projectName": "3W-TT3-25051 - 560B Spot welding line",
       "statuses": {
-        "2024-12-05": "In Progress"
+        "2024-12-05": "Completed"
       }
     },
     {
       "engineerName": "Eswanth Potnuri",
       "projectName": "3W-TT3-25051 - 560B Spot welding line",
       "statuses": {
-        "2024-12-05": "In Progress"
+        "2024-12-05": "Completed"
       }
     },
     {
@@ -137,7 +137,7 @@
       "engineerName": "Keerthi",
       "projectName": "3W-TT3-25051 - 560B Spot welding line",
       "statuses": {
-        "2024-12-05": "In Progress"
+        "2024-12-05": "Completed"
       }
     },
     {
