--- a/project-status.json
+++ b/project-status.json
@@ -74,7 +74,7 @@
       "engineerName": "Praveen Kumar",
       "projectName": "3A2409 - GLASS TAPING AND O-CELL PICK & PLACE STATION (PA23 Phase -2)",
       "statuses": {
-        "2024-12-05": "In Progress"
+        "2024-12-05": "Completed"
       }
     },
     {
@@ -109,14 +109,14 @@
       "engineerName": "Harikrishnan P R",
       "projectName": "3W-TT3-25051 - 560B Spot welding line",
       "statuses": {
-        "2024-12-05": "Completed"
+        "2024-12-05": "Completed,Installation Pending"
       }
     },
     {
       "engineerName": "Eswanth Potnuri",
       "projectName": "3W-TT3-25051 - 560B Spot welding line",
       "statuses": {
-        "2024-12-05": "Completed"
+        "2024-12-05": "Completed,Installation Pending"
       }
     },
     {
@@ -144,7 +144,7 @@
       "engineerName": "Sachin",
       "projectName": "3W2401_MRA ROOF SPOT WELDING LINE TKM",
       "statuses": {
-        "2024-12-05": "Completed"
+        "2024-12-05": "Completed,Installation Pending"
       }
     },
     {
@@ -159,7 +159,7 @@
       "engineerName": "Deekshitha",
       "projectName": "3W-TT3-25051 - 560B Spot welding line",
       "statuses": {
-        "2024-12-05": "In Progress"
+        "2024-12-05": "Completed"
       }
     },
     {
